# compareDirs2

./: .gitignore  Makefile  README.md  compareDirs2.sh
rustVer/: Cargo.toml  compareDirs2
rustVer/src/: main.rs
