[package]
name = "compareDirs2"
version = "1.1.0"
edition = "2021"


[[bin]]
name = "compareDirs2"
path = "src/main.rs"
 
[dependencies]
clap = { version = "4", features = ["derive"] }
digest = "0.10"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
blake3 = "1"
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64", "xxh32"] }
crc32fast = "1"
walkdir = "2"
terminal_size = "0.3"
ctrlc = { version = "3", features = ["termination"] }
signal-hook = "0.3"
num_cpus = "1"
 
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
 
 
